--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-google-recaptcha": "^2.1.0",
-    "react-redux": "^7.2.6"
+    "react-redux": "^7.2.6",
+    "request-ip": "^2.1.3"
   },
   "devDependencies": {
     "@types/lodash": "^4.14.177",
@@ -26,6 +27,7 @@
     "@types/node": "16.11.9",
     "@types/react": "17.0.36",
     "@types/react-google-recaptcha": "^2.1.2",
+    "@types/request-ip": "^0.0.37",
     "autoprefixer": "^10.4.0",
     "eslint": "7",
     "eslint-config-next": "12.0.4",
